# instruction-padding

./: Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml
.github/workflows/: main.yml  publish-rust.yml
interface/: Cargo.toml
interface/src/: instruction.rs  lib.rs
program/: Cargo.toml
program/src/: instruction.rs  lib.rs  processor.rs
program/tests/: noop.rs  system.rs
scripts/: restart-test-validator.sh
