[package]
name = "spl-instruction-padding-interface"
version = "0.1.0"
description = "Solana Program Library Instruction Padding Interface"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/instruction-padding"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[dependencies]
num_enum = "0.7.4"
solana-instruction = { version = "2.2.1", features = ["std"] }
solana-program-error = "2.2.2"
solana-pubkey = "2.2.1"

[dev-dependencies]
solana-program = "2.3.0"
static_assertions = "1.1.0"

[lib]
crate-type = ["lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
