[package]
name = "spl-instruction-padding"
version = "0.3.0"
description = "Solana Program Library Instruction Padding Program"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
repository = "https://github.com/solana-program/instruction-padding"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-account-info = "3.0.0"
solana-cpi = "3.0.0"
solana-instruction = { version = "3.0.0", features = ["std"] }
solana-program-entrypoint = "3.0.0"
solana-program-error = "3.0.0"
solana-pubkey = "3.0.0"
spl-instruction-padding-interface = { version = "1.0.0", path = "../interface" }

[dev-dependencies]
solana-native-token = "3.0.0"
solana-program-test = "3.0.10"
solana-signer = "3.0.0"
solana-system-interface = "2"
solana-transaction = "3.0.0"
static_assertions = "1.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
